syntax = "proto3";
package url_shortener.proto;
option go_package = "github.com/thai-ru/url_shortener";

message URLRequest {
  string original_url =1;
}

message URLResponse {
  string short_url =1;
  string original_url =2;
}

service URLShortener {
  rpc ShortenURL(URLRequest) returns (URLResponse);
  rpc ExpandURL(URLRequest) returns (URLResponse);
}